# Omnius

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  README.md
.github/workflows/: ci.yml  deploy-backend.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: agent_service.py  analyzer.py  narrative_extractor.py  pipeline.py  providers.py  scraper.py
backend/tests/: test_agentic_research_loop.py  test_api_functional.py  test_architecture.py  test_auto_numbering.py  test_main.py  test_research_guardrails.py  test_smart_reranker.py  test_sse_heartbeat.py  test_ux_backend.py
docs/adr/: 0001-cold-start-mitigation.md
docs/prd/: agentic-research-hardening.md  production-stabilization.md
docs/walkthroughs/: research-hardening-walkthrough.md  research-stabilization.md
frontend/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/__tests__/: App.test.tsx  apiService.test.ts
frontend/src/components/: AnalysisWorkspace.tsx  KeywordRelationshipGraph.tsx  LandingPage.tsx  ResultDashboard.tsx
frontend/src/services/: apiService.ts  config.ts
scratch/: verify_docker.ps1
