[project]
name = "llm-omnius"
version = "0.1.0"
description = "Automated news framing analysis tool based on Robert Entman's methodology using Groq LLM intelligence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "langdetect",
    "groq",
    "pydantic",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "tenacity",
]
